--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist/ && babel ./ --out-dir dist/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./npm-debug.log --copy-files",
-    "start": "node dist/index.js"
+    "start:prod": "node dist/index.js",
+    "start": "nodemon --exec babel index.js"
   },
   "keywords": [],
   "author": "",
@@ -15,8 +16,9 @@
     "graphql-yoga": "^1.17.4"
   },
   "devDependencies": {
-    "rimraf": "^2.6.3",
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "nodemon": "^2.0.4",
+    "rimraf": "^2.6.3"
   }
 }
