--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@types/d3": "^5.7.2",
     "@types/jest": "24.0.12",
     "@types/node": "12.0.0",
@@ -19,8 +19,8 @@
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "3.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^3.4.3",
     "typescript": "3.4.5"
   },
   "scripts": {
@@ -49,7 +49,7 @@
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.13.0",
     "enzyme-to-json": "^3.3.5",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^26.4.0",
     "waait": "^1.0.4"
   }
 }
