Initial ver of k8s deployment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,31 +2,30 @@
 version: "3"
 
 services:
-    csv-parser:
-        build:
-            context: .
-            dockerfile: docker/csv-parser/Dockerfile
-        ports:
-            - "5000:5000"
+  csv-parser:
+    build:
+      context: .
+      dockerfile: docker/csv-parser/Dockerfile
+    ports:
+      - "5000:5000"
 
-    backend:
-        build:
-            context: .
-            dockerfile: docker/backend/Dockerfile
-        volumes:
-            - ./backend:/app
-        ports:
-            - "4000:4000"
-        command: npm run start
+  backend:
+    build:
+      context: .
+      dockerfile: docker/backend/Dockerfile
+    volumes:
+      - ./backend:/app
+    ports:
+      - "4000:4000"
 
-    frontend:
-        build:
-            context: .
-            dockerfile: docker/frontend/Dockerfile
-        volumes:
-            - ./frontend:/app
-            - /app/node_modules/
-        ports:
-            - "3000:3000"
-        depends_on:
-            - backend
+  frontend:
+    build:
+      context: .
+      dockerfile: docker/frontend/Dockerfile
+    volumes:
+      - ./frontend:/app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - backend
+    stdin_open: true
