--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:12
 RUN mkdir -p /app
 WORKDIR /app
-COPY ./frontend/package*.json ./
-RUN npm ci -qy
+COPY ./frontend/package.json ./
+COPY ./frontend/yarn.lock ./
+RUN yarn install
 COPY ./frontend .
-EXPOSE 3000
-CMD [ "npm", "run", "start" ]
+CMD [ "yarn", "start" ]
