--- a/k8s/kompose/backend.yaml
+++ b/k8s/kompose/backend.yaml
@@ -17,7 +17,7 @@ spec:
         io.kompose.service: backend
     spec:
       containers:
-        - image: backend
+        - image: localhost:5000/backend
           name: backend
           ports:
             - containerPort: 4000
