--- a/k8s/kompose/frontend.yaml
+++ b/k8s/kompose/frontend.yaml
@@ -17,7 +17,7 @@ spec:
         io.kompose.service: frontend
     spec:
       containers:
-        - image: frontend
+        - image: localhost:5000/frontend
           name: frontend
           ports:
             - containerPort: 3000
