Migrate frontend to nextjs - WIP

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,15 +17,14 @@ services:
       - ./backend:/app
     ports:
       - "4000:4000"
-
-  frontend:
-    build:
-      context: .
-      dockerfile: docker/frontend/Dockerfile
-    volumes:
-      - ./frontend:/app
-    ports:
-      - "3000:3000"
-    depends_on:
-      - backend
-    stdin_open: true
+#   frontend:
+#     build:
+#       context: .
+#       dockerfile: docker/frontend/Dockerfile
+#     volumes:
+#       - ./frontend:/app
+#     ports:
+#       - "3000:3000"
+#     depends_on:
+#       - backend
+#     stdin_open: true
