--- a/docker/frontend/Dockerfile
+++ b/docker/frontend/Dockerfile
@@ -5,4 +5,4 @@ COPY ./frontend/package.json ./
 COPY ./frontend/yarn.lock ./
 RUN yarn install
 COPY ./frontend .
-CMD [ "yarn", "start" ]
+CMD [ "yarn", "dev" ]
