--- a/k8s/kompose/frontend.yaml
+++ b/k8s/kompose/frontend.yaml
@@ -1,6 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.22.0 (HEAD)
+  creationTimestamp: null
   labels:
     io.kompose.service: frontend
   name: frontend
@@ -13,15 +17,23 @@ spec:
     type: Recreate
   template:
     metadata:
+      annotations:
+        kompose.cmd: kompose convert
+        kompose.version: 1.22.0 (HEAD)
+      creationTimestamp: null
       labels:
         io.kompose.service: frontend
     spec:
       containers:
-        - image: localhost:5000/frontend
+        - env:
+            - name: ENDPOINT
+              value: backend
+          image: localhost:5000/frontend
           name: frontend
           ports:
             - containerPort: 3000
           resources: {}
+          stdin: true
       restartPolicy: Always
 status: {}
 ---
