--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "next": "10.0.8",
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.32.8"
   },
   "devDependencies": {
     "@types/d3": "^6.3.0",
