--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
     "@apollo/client": "^3.3.11",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@nivo/bar": "^0.67.0",
+    "@nivo/core": "^0.67.0",
     "apollo-boost": "^0.4.9",
     "d3": "^6.5.0",
     "d3-zoom": "^2.0.0",
