--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
@@ -25,9 +27,15 @@
     "sass": "^1.32.8"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.13",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/react": "^6.1.21",
     "@types/d3": "^6.3.0",
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
+    "babel-loader": "^8.2.2",
     "typescript": "^4.2.3"
   }
 }
