--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
     "babel-loader": "^8.2.2",
+    "sass-loader": "10.1.1",
     "typescript": "^4.2.3"
   }
 }
