--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "lint": "eslint . --ext .tsx,.ts,.js,.jsx"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
@@ -35,7 +36,13 @@
     "@types/d3": "^6.3.0",
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "babel-loader": "^8.2.2",
+    "eslint": "^7.26.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "sass-loader": "10.1.1",
     "typescript": "^4.2.3"
   }
