--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,16 @@
 version: "3"
 
 services:
+  db:
+    image: mongo:4.2.8
+    volumes:
+      - dbdata:/data/db
+    ports:
+      - 27017:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: password
+
   csv-parser:
     build:
       context: .
@@ -36,3 +46,6 @@ services:
   #   depends_on:
   #     - backend
   #   stdin_open: true
+
+volumes:
+  dbdata:
