--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@nivo/bar": "^0.67.0",
     "@nivo/core": "^0.67.0",
     "apollo-boost": "^0.4.9",
+    "cross-fetch": "^3.1.4",
     "d3": "^6.5.0",
     "d3-zoom": "^2.0.0",
     "graphql": "^15.5.0",
@@ -26,7 +27,8 @@
     "react": "17.0.1",
     "react-apollo": "^3.1.5",
     "react-dom": "17.0.1",
-    "sass": "^1.32.8"
+    "sass": "^1.32.8",
+    "ts-invariant": "^0.7.3"
   },
   "devDependencies": {
     "@babel/core": "^7.13.13",
@@ -55,5 +57,8 @@
     "jest-dom": "^4.0.0",
     "sass-loader": "10.1.1",
     "typescript": "^4.2.3"
+  },
+  "resolutions": {
+    "ts-invariant": "^0.7.3"
   }
 }
