--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,24 @@ services:
       - ENDPOINT=csv-parser
     container_name: backend
 
+  cms:
+    build:
+      context: .
+      dockerfile: docker/cms/Dockerfile
+    ports:
+      - "1337:1337"
+    container_name: cms
+    environment:
+      DATABASE_HOST: db
+      DATABASE_PORT: 27017
+      DATABASE_NAME: cms
+      DATABASE_USERNAME: root
+      DATABASE_PASSWORD: password
+      CSV_PARSER_HOST: csv-parser
+    depends_on:
+      - csv-parser
+      - db
+
   # frontend:
   #   build:
   #     context: .
