--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,38 +32,38 @@ services:
       - ENDPOINT=csv-parser
     container_name: backend
 
-  # cms:
-  #   build:
-  #     context: .
-  #     dockerfile: docker/cms/Dockerfile
-  #   ports:
-  #     - "1337:1337"
-  #   container_name: cms
-  #   environment:
-  #     DATABASE_HOST: db
-  #     DATABASE_PORT: 27017
-  #     DATABASE_NAME: cms
-  #     DATABASE_USERNAME: root
-  #     DATABASE_PASSWORD: password
-  #     CSV_PARSER_HOST: csv-parser
-  #   depends_on:
-  #     - csv-parser
-  #     - db
+  cms:
+    build:
+      context: .
+      dockerfile: docker/cms/Dockerfile
+    ports:
+      - "1337:1337"
+    container_name: cms
+    environment:
+      DATABASE_HOST: db
+      DATABASE_PORT: 27017
+      DATABASE_NAME: cms
+      DATABASE_USERNAME: root
+      DATABASE_PASSWORD: password
+      CSV_PARSER_HOST: csv-parser
+    depends_on:
+      - csv-parser
+      - db
 
-  # frontend:
-  #   build:
-  #     context: .
-  #     dockerfile: docker/frontend/Dockerfile
-  #   volumes:
-  #     - ./frontend:/app
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     - ENDPOINT=cms
-  #   container_name: frontend
-  #   depends_on:
-  #     - cms
-  #   stdin_open: true
+  frontend:
+    build:
+      context: .
+      dockerfile: docker/frontend/Dockerfile
+    volumes:
+      - ./frontend:/app
+    ports:
+      - "3000:3000"
+    environment:
+      - ENDPOINT=cms
+    container_name: frontend
+    depends_on:
+      - cms
+    stdin_open: true
 
 volumes:
   dbdata:
