--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,7 @@
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "lint": "eslint . --ext .tsx,.ts,.js,.jsx",
-    "test": "jest",
-    "e2e:open": "cypress open",
-    "e2e:run": "cypress run",
-    "e2e:run:spec": "npm run e2e:run -- --headless --spec \"cypress/integration/sample_spec.ts\""
+    "test": "jest"
   },
   "dependencies": {
     "@apollo/client": "^3.3.11",
@@ -51,9 +48,7 @@
     "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
-    "cypress": "^7.3.0",
     "eslint": "^7.26.0",
-    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
