--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
+    "chromatic": "dotenv npx chromatic --project-token %CHROMATIC_PROJECT_TOKEN%",
     "lint": "eslint . --ext .tsx,.ts,.js,.jsx",
     "test": "jest"
   },
@@ -48,6 +49,7 @@
     "@typescript-eslint/parser": "^4.22.1",
     "babel-jest": "^26.6.3",
     "babel-loader": "^8.2.2",
+    "dotenv-cli": "^4.0.0",
     "eslint": "^7.26.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.2",
